# mainali_model

gp-model-main/: README.org  pyproject.toml
gp-model-main/src/: replicate_mainali.ipynb  replicate_tanni.ipynb
gp-model-main/src/gp_model/: __init__.py  analysis.py  place_fields_1d.py  place_fields_2d.py  place_fields_3d.py  place_fields_model_1d.py  place_fields_model_3d.py  utils.py
